[package]
name = "rooting"
version = "0.1.8"
edition = "2021"
license = "ISC"
description = "Associate data with HTML elements in WASM"
repository = "https://github.com/andrewbaxter/rooting"
readme = "readme.md"

[features]
futures = ["dep:futures", "dep:wasm-bindgen-futures"]

[dependencies]
futures = { version = "0.3", optional = true }
gloo-events = "0.1"
gloo-utils = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Element",
    "Document",
    "Window",
    "Node",
    "HtmlCollection",
    "DomTokenList",
    "HtmlElement",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
    "ResizeObserverOptions",
    "ResizeObserverBoxOptions",
] }
